# cmdl-args

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/app/: CMakeLists.txt  app.cpp  args.txt  generator.cpp  generator.h  parser.cpp  parser.h  process.cpp  process.h  tests.h
src/test/: compare.cmake  input.txt  reference.cpp  reference.h
